--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-uploadfiles": "^1.0.4",
     "mongoose": "^7.4.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "uid2": "^1.0.0",
     "uniqid": "^5.4.0"
   }
